Update1 index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
+<!DOCTYPE html>
 <html>
+<head>
+    <meta charset="utf-8" />
+    <title>My Test Page</title>
+</head>
 <body>
-<applet code="shapesApplet.class"width="380"height="250">
-</applet>
+    <h1>Hello World!</h1>
+    <p>This is my first paragraph.</p>
+    <a href="https://www.w3schools.com">Visit W3Schools</a>
 </body>
 </html>
